# wpmrs

./: Cargo.toml  log.txt  prompts.json
src/: lib.rs  loggers.rs  main.rs  prompts.rs
src/webscraping/: mod.rs  typeracerdata.rs
