[package]
name = "wpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
html5ever = "0.26.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
rand = "0.8.5"
ratatui = "0.20.1"
regex = "1.8.0"
reqwest = {version = "0.11.16", features = ["blocking"]}
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"


